[package]
name = "gittig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-util", "process"]}
tower-http = { version = "=0.5.2", features = ["trace"] }
tracing-subscriber = "0.3.18"
